@@ -7,11 +7,13 @@ matrix:
 environment:
   matrix:
     - perl_type: strawberry
-      perl_version: 5.28.0.1
+      perl_version: 5.30.1.1
     - perl_type: strawberry
-      perl_version: 5.26.1.1
+      perl_version: 5.28.2.1
     - perl_type: strawberry
-      perl_version: 5.24.3.1
+      perl_version: 5.26.3.1
+    - perl_type: strawberry
+      perl_version: 5.24.4.1
     - perl_type: strawberry
       perl_version: 5.22.3.1
     - perl_type: strawberry
@@ -22,6 +24,12 @@ environment:
       perl_version: 5.16.3.20170202
     - perl_type: strawberry
       perl_version: 5.14.4.1
+    - perl_type: strawberry
+      perl_version: 5.12.3.20180709
+    - perl_type: strawberry
+      perl_version: 5.10.1.5
+    - perl_type: strawberry
+      perl_version: 5.8.9.5
 
 install:
   - 'call .appveyor.cmd perl_setup'
