@@ -35,19 +35,6 @@ perl:
 env:
   global:
     - TEST_PARTITIONS=4
-    - AUTHOR_TESTING=1
-    - AUTOMATED_TESTING=1
-    - RELEASE_TESTING=1
-matrix:
-  include:
-    - perl: "5.20"
-      env: COVERAGE=1 TEST_PARTITION=1
-    - perl: "5.20"
-      env: COVERAGE=1 TEST_PARTITION=2
-    - perl: "5.20"
-      env: COVERAGE=1 TEST_PARTITION=3
-    - perl: "5.20"
-      env: COVERAGE=1 TEST_PARTITION=4
 cache:
   directories:
     - $HOME/perl5
@@ -60,12 +47,7 @@ before_install:
   - cd $BUILD_DIR
 install:
   - cpan-install --deps Test::Spelling Test::Pod Test::Pod::Coverage Test::Version Test::EOL
-  - cpan-install --coverage
-before_script:
-  - coverage-setup
 script:
   - perl Makefile.PL
   - make
   - prove -v -r -b -s -j$(test-jobs) $(test-files)
-after_success:
-  - coverage-report
