@@ -14,6 +14,7 @@ LICENSE
 Makefile.PL
 MANIFEST			This list of files
 README.md
+t/00-report-prereqs.t
 t/Common.pm
 t/ExtUtils/TBone.pm
 t/IO_InnerFile.t
