@@ -50,6 +50,8 @@
       "test" : {
          "requires" : {
             "File::Basename" : "0",
+            "File::Spec" : "0",
+            "File::Temp" : "0",
             "FileHandle" : "0",
             "IO::File" : "0",
             "IO::Handle" : "0",
