@@ -1,47 +1,47 @@
-#!/usr/bin/perl -w         #-*-Perl-*-
+use strict;
+use warnings;
 
-use lib "./t", "./lib"; 
+use File::Spec ();
+use File::Temp qw(tempfile);
 use IO::InnerFile;
 use IO::File;
+use Test::More;
 
-use ExtUtils::TBone;
-use Common;
+sub temp_file_path {
+    # older EUMMs turn this on. We don't want to emit warnings.
+    # also, some of our CORE function overrides emit warnings. Silence those.
+    local $^W;
 
+    my $file;
+    (undef, $file) = tempfile('tempXXXXX', DIR => File::Spec->tmpdir, OPEN => 0);
+    return $file;
+}
 
-#--------------------
-#
-# TEST...
-#
-#--------------------
-
-# Make a tester:
-my $T = typical ExtUtils::TBone;
-Common->test_init(TBone=>$T);
-
-$T->begin(7);
+plan tests => 7;
 
 # Create a test file
-open(OUT, '>', 't/dummy-test-file') || die("Cannot write t/dummy-test-file: $!");
-binmode OUT;
+my $temp_file = temp_file_path();
+open(my $ofh, '>', $temp_file) || die("Cannot write $temp_file: $!");
+binmode $ofh;
 my $data = "Here is some dummy content.\n";
 $data   .= "Here is some more dummy content\n";
 $data   .= "Here is yet more dummy content.\n";
 $data   .= "And finally another line.\n";
-print OUT $data;
-close(OUT);
+print {$ofh} $data;
+close($ofh);
 
 # Open it as a regular file handle
-my $fh = IO::File->new('<t/dummy-test-file');
+my $fh = IO::File->new("<$temp_file");
 
 my $inner = IO::InnerFile->new($fh, 28, 64); # Second and third lines
 
 my $line;
 $line = <$inner>;
-$T->ok_eq($line, "Here is some more dummy content\n");
+is($line, "Here is some more dummy content\n", "readline: got the right second line");
 $line = <$inner>;
-$T->ok_eq($line, "Here is yet more dummy content.\n");
+is($line, "Here is yet more dummy content.\n", "readline: got the right third line");
 $line = <$inner>;
-$T->ok(!defined($line));
+is($line, undef, "readline: undef reached when past our definition");
 
 $inner->close();
 
@@ -50,26 +50,17 @@ $inner = IO::InnerFile->new($fh, 28, 64); # Second and third lines
 # Test list context (CPAN ticket #66186)
 my @arr;
 @arr = <$inner>;
-$T->ok(scalar(@arr) == 2);
-$T->ok_eq($arr[0], "Here is some more dummy content\n");
-$T->ok_eq($arr[1], "Here is yet more dummy content.\n");
+is(scalar(@arr), 2, 'readline: list context: got the right number');
+is($arr[0], "Here is some more dummy content\n", 'readline: list context: got the right second line');
+is($arr[1], "Here is yet more dummy content.\n", 'readline: list context: got the right third line');
 
 # Make sure slurp mode works as expected
 $inner->seek(0, 0);
 {
-	local $/;
-	my $contents = <$inner>;
-	$T->ok_eq($contents, "Here is some more dummy content\nHere is yet more dummy content.\n");
+    local $/;
+    my $contents = <$inner>;
+    is($contents, "Here is some more dummy content\nHere is yet more dummy content.\n", 'readline: slurpy: got full contents');
 }
 
 # So we know everything went well...
-$T->end;
-unlink('t/dummy-test-file');
-
-
-
-
-
-
-
-
+unlink($temp_file);
