@@ -18,6 +18,7 @@ Revision history IO::Stringy
   - Get rid of the set-version.pl file as it's no longer needed
   - Add AppVeyor CI testing
   - Add Travis CI testing
+  - update t/IO_InnerFile.t to use Test::More and a proper TEMP file
 
 2.111    2015-04-22
   - Update maintainer's name, which is now Dianne Skoll.
